<resources>
    <string name="app_name">Android lab5</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="user_name_form">User name form</string>
    <string name="address_form">Address form</string>
    <string name="comment_form">Comment form</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="town">Town</string>
    <string name="exit">Exit</string>
    <string name="close_app">Close app</string>
    <string name="cancel_form">Cancel form</string>
    <string name="are_you_sure_you_want_cancel">Are you sure you want to cancel this form?</string>
    <string name="are_you_sure_you_want_exit">Are you sure you want close the app?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="error_toast">Please, specify all fields!</string>
</resources>