<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/indent_24">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameInputLayout"
            style="@style/InputLayoutStyle.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                style="@style/EditText.Uneditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressInputLayout"
            style="@style/InputLayoutStyle.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEditText"
                style="@style/EditText.Uneditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentInputLayout"
            style="@style/InputLayoutStyle.Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentEditText"
                style="@style/EditText.Uneditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>